--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,37 @@
+$font-default : Arial, Helvetica, sans-serif;
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font-default;
+    margin:0;
+    padding:0
 }
+
+header {
+    background-color: red;
+}
+
+section {
+    background: yellow;
+}
+
+footer{
+    background-color: blue;
+}
+
+.container {
+    padding:20px;
+}
+
+.border-circle{
+    border-radius: 50%;
+}
+
+.img-avatar{
+    width: 150px;
+}
+
+.centraliza-conteudo{
+    width: 150;
+    margin: 0 auto;
+}
+
