--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,16 +13,49 @@ footer {
   background-color: blue; }
 
 .container {
-  padding: 20px; }
+  padding-top: 80px; }
+
+.container-box-top {
+  padding: 50px; }
 
 .border-circle {
   border-radius: 50%; }
 
 .img-avatar {
-  width: 150px; }
+  width: 200px; }
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
 
 .centraliza-conteudo {
-  width: 150;
+  width: 800px;
   margin: 0 auto; }
+
+.titulo-header {
+  font-size: 40px;
+  margin: 10px 0 0 0;
+  padding: 0; }
+
+.subtitulo-header {
+  font-size: 20px;
+  margin: 10px 0 20px 0;
+  padding: 0; }
+
+.btn {
+  text-decoration: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
+  border-radius: 10px 10px 10px 10px;
+  width: 50px;
+  text-align: center; }
+
+.btn-nav {
+  background: #1E88E5;
+  border: 2px solid #1E88E5;
+  color: #FFF; }
 
 /*# sourceMappingURL=style.css.map */
