--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,6 +1,9 @@
 * {
   font-family: 'Roboto Slab', serif; }
 
+html, body {
+  height: 100%; }
+
 .background-topo {
   padding: 20px;
   background: #8fbdbd; }
@@ -41,5 +44,10 @@
 
 .progress-bar-starwars {
   background: #757575 !important; }
+
+.teste {
+  width: 100%;
+  height: auto;
+  min-height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
