--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -2,6 +2,10 @@
     font-family: 'Roboto Slab', serif;    
 }
 
+html,body{
+    height: 100%;
+}
+
 .background-topo{
     padding: 20px;
     background: #8fbdbd;
