--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -45,9 +45,30 @@ html, body {
 .progress-bar-starwars {
   background: #757575 !important; }
 
-.teste {
-  width: 100%;
-  height: auto;
-  min-height: 100%; }
+.typewriter span {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid white;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em;
+  /* Adjust as needed */
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite; }
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent; }
+  50% {
+    border-color: white; } }
 
 /*# sourceMappingURL=style.css.map */
