--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -33,6 +33,7 @@ html,body{
 }
 
 .alinha-botao-setor{
+    margin-top: 10px;
     margin-bottom:-20px;
 }
 
@@ -61,8 +62,8 @@ html,body{
     background: #757575 !important;
 }
 
-
-.typewriter span {
+.typewriter p {
+  max-width: 200px;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid white; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
