--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -46,18 +46,12 @@ html, body {
 .progress-bar-starwars {
   background: #757575 !important; }
 
-.typewriter p {
-  max-width: 200px;
+.typewrite {
+  max-width: 250px;
   overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid white;
-  /* The typwriter cursor */
   white-space: nowrap;
-  /* Keeps the content on a single line */
   margin: 0 auto;
-  /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em;
-  /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite; }
 
 /* The typing effect */
