--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -48,7 +48,7 @@ html,body{
     margin-left: 20px;
 }
 
-.list-item a{
+.list-item{
     // font-family: 'Roboto Condensed', sans-serif;
     font-weight: bolder;
     letter-spacing: 1px;
@@ -63,7 +63,6 @@ html,body{
 
 .link{
     font-weight: bolder;
-    font-size: 18px;
     letter-spacing: 1.5px;
     text-decoration: none;
     color: $text-color;
